--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         run: |
+          mkdir -v build
           mkdir -v -p build/${EXPORT_NAME}_${LORIEN_VERSION}_Windows
           mkdir -v -p ~/.local/share/godot/export_templates
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
@@ -46,6 +47,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         run: |
+          mkdir -v build
           mkdir -v -p build/${EXPORT_NAME}_${LORIEN_VERSION}_Linux
           mkdir -v -p ~/.local/share/godot/export_templates
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
@@ -70,6 +72,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         run: |
+          mkdir -v build
           mkdir -v -p build/${EXPORT_NAME}_${LORIEN_VERSION}_Mac
           mkdir -v -p ~/.local/share/godot/export_templates
           mv /root/.local/share/godot/export_templates/${GODOT_VERSION}.stable ~/.local/share/godot/export_templates/${GODOT_VERSION}.stable
